--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dev-post",
+  "name": "devpost",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,14 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.3.0",
+    "@react-native-firebase/auth": "^18.3.0",
+    "@react-native-firebase/firestore": "^18.3.0",
+    "@react-native-firebase/storage": "^18.3.0",
+    "@react-native-google-signin/google-signin": "^10.0.1",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "expo": "~49.0.6",
+    "expo-dev-client": "~2.4.6",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "styled-components": "^6.0.7",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-gesture-handler": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@types/styled-components-react-native": "^5.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^5.1.3"
   },
   "private": true
