--- a/app.json
+++ b/app.json
@@ -11,7 +11,9 @@
       "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "googleServicesFile": "./GoogleService-Info.plist",
@@ -32,6 +34,11 @@
     "plugins": [
       "@react-native-firebase/app",
       "@react-native-google-signin/google-signin"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "85157e09-4553-4c2d-afef-e0b4ca6b63b5"
+      }
+    }
   }
 }
