--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "~3.22.0",
     "styled-components": "^6.0.7",
     "react-native-reanimated": "~3.3.0",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-native-gesture-handler": "~2.12.0",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
