--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "date-fns": "^2.30.0",
     "expo": "~49.0.6",
     "expo-dev-client": "~2.4.6",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-picker": "^5.6.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
